--- a/Reston.EProc.Runner.IIS/View/dashboard.html
+++ b/Reston.EProc.Runner.IIS/View/dashboard.html
@@ -59,15 +59,15 @@
             <aside class="main-sidebar" ng-app="app">
                 <!-- sidebar: style can be found in sidebar.less -->
                 <section class="sidebar">
-                    <!--<div class="user-panel" ng-controller="user">
+                    <div class="user-panel" ng-controller="user">
                         <div class="pull-left info">
-                            <p class="title" ng-bind="user.nama"></p>
-                            <p class="deskripsi" ng-bind="user.divisi"></p>
+                            <p class="title" ng-bind="user.FullName"></p>
+                            <p class="deskripsi" ng-bind="user.jabatan"></p>
                         </div>
-                        <div class="pull-right image image-profile">
-                            <img alt="User Image" class="img-circle" src="{{user.logo}}">
+                       <div class="pull-right image image-profile">
+                          <!--   <img alt="User Image" class="img-circle" src="{{user.logo}}">-->
                         </div>
-                    </div>-->
+                    </div>
                     <!-- sidebar menu: : style can be found in sidebar.less -->
                     <ul class="sidebar-menu" ng-controller="side-menu">
                         <li class="treeview" ng-repeat="menu in menus">
