--- a/Reston.EProc.Runner.IIS/View/monitoring-proyek-add.html
+++ b/Reston.EProc.Runner.IIS/View/monitoring-proyek-add.html
@@ -213,6 +213,7 @@
                                                 <thead>
                                                     <tr>
                                                         <td class="tengah text-bold">Nama Tahapan</td>
+                                                        <td class="tengah text-bold">Bobot Pekerjaan</td>
                                                         <td class="tengah text-bold">Tanggal Mulai</td>
                                                         <td class="tengah text-bold">Tanggal Selesai</td>
                                                         <td class="tengah text-bold">Action</td>
