send emai terkait

--- a/Reston.EProc.Runner.IIS/View/pengadaan-list.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-list.html
@@ -111,7 +111,7 @@
                     <div class="user-panel" ng-controller="user">
                         <div class="pull-left info">
                             <p class="title" ng-bind="user.FullName"></p>
-                            <p class="deskripsi" ng-bind="user.jabatan"></p>
+                           <!-- <p class="deskripsi" ng-bind="user.jabatan"></p>-->
                         </div>
                        <div class="pull-right image image-profile">
                           <!--   <img alt="User Image" class="img-circle" src="{{user.logo}}">-->
