--- a/Reston.EProc.Runner.IIS/View/dashboard.html
+++ b/Reston.EProc.Runner.IIS/View/dashboard.html
@@ -55,14 +55,14 @@
                 </nav>
             </header>
         </div>
-        <div id="menu">
+       <div id="menu">
             <aside class="main-sidebar" ng-app="app">
                 <!-- sidebar: style can be found in sidebar.less -->
                 <section class="sidebar">
                     <div class="user-panel" ng-controller="user">
                         <div class="pull-left info">
                             <p class="title" ng-bind="user.FullName"></p>
-                            <p class="deskripsi" ng-bind="user.jabatan"></p>
+                           <!-- <p class="deskripsi" ng-bind="user.jabatan"></p>-->
                         </div>
                        <div class="pull-right image image-profile">
                           <!--   <img alt="User Image" class="img-circle" src="{{user.logo}}">-->
