--- a/Reston.EProc.Runner.IIS/View/eCatalogue2.html
+++ b/Reston.EProc.Runner.IIS/View/eCatalogue2.html
@@ -69,25 +69,23 @@
         </div>
         <!-- Left side column. contains the logo and sidebar -->
         <div id="menu">
-            <aside class="main-sidebar">
+            <aside class="main-sidebar" ng-app="app">
                 <!-- sidebar: style can be found in sidebar.less -->
                 <section class="sidebar">
-                    <!--<div class="user-panel" ng-controller="user">
+                    <div class="user-panel" ng-controller="user">
                         <div class="pull-left info">
-                            <p class="title" ng-bind="user.nama"></p>
-                            <p class="deskripsi" ng-bind="user.divisi"></p>
+                            <p class="title" ng-bind="user.FullName"></p>
+                           <!-- <p class="deskripsi" ng-bind="user.jabatan"></p>-->
                         </div>
-                        <div class="pull-right image image-profile">
-                            <img alt="User Image" class="img-circle" src="{{user.logo}}" >
+                       <div class="pull-right image image-profile">
+                          <!--   <img alt="User Image" class="img-circle" src="{{user.logo}}">-->
                         </div>
-                    </div>-->
+                    </div>
                     <!-- sidebar menu: : style can be found in sidebar.less -->
                     <ul class="sidebar-menu" ng-controller="side-menu">
-                        <!-- <li class="header">MAIN NAVIGATION</li>-->
-
                         <li class="treeview" ng-repeat="menu in menus">
                             <a href="{{menu.url}}">
-                                <i class="{{menu.css}}"></i> <span ng-bind="menu.menu"></span>
+                                <i class="{{menu.css}}"></i> <span ng-bind="menu.menu">Dashboard</span>
                             </a>
                         </li>
                     </ul>
@@ -95,6 +93,7 @@
                 <!-- /.sidebar -->
             </aside>
         </div>
+
 
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
