--- a/Reston.EProc.Runner.IIS/View/dashboard.html
+++ b/Reston.EProc.Runner.IIS/View/dashboard.html
@@ -162,7 +162,7 @@
                                             </tr>
                                             <tr>
                                                 <td class="rata_kiri text-bold">Persetujuan Approval User Terkait</td>
-                                                <td class="tengah text-bold"><a href="#" id="approval-user-terkait">0</a></td>
+                                                <td class="tengah text-bold"><a href="approval-user-terkait.html" id="approval-user-terkait">0</a></td>
                                             </tr>
                                             <tr>
                                                 <td class="rata_kiri text-bold">Proyek Monitoring</td>
