--- a/Reston.EProc.Runner.IIS/View/pengadaan-add.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-add.html
@@ -307,6 +307,14 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div id="lala">
+                                        <div class="row">
+                                            <div class="form-group col-md-4">
+                                                <label class="title">Nama Kriteria :</label>
+                                                <input id="bobot-harga" attrid="" type="text" class="form-control input-bobot-pengadaan" value=''>
+                                            </div>
+                                            </div>
+                                        </div>
                                     <div id="kreteriaPembobotan">
 
                                     </div>
