--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -1077,7 +1077,7 @@
                                                                              <div class="row">
                                                                                 <div class="col-md-4">
                                                                                     <div class="form-group">
-                                                                                        <button class="btn btn-success pull-left add-user-terkait">Pilih User Approval Terkait</button>
+                                                                                        <button class="btn btn-success pull-left add-user-terkait action-pelaksanaan">Pilih User Approval Terkait</button>
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
@@ -1109,11 +1109,11 @@
                                                                          </div>
                                                                          <div class="row">
                                                                              <div class="col-md-2">
-                                                                                <button class="btn btn-success pull-left pilih-user-approver-pemenang ">Pilih User</button>
+                                                                                <button class="btn btn-success pull-left pilih-user-approver-pemenang action-pelaksanaan ">Pilih User</button>
                                                                                  
                                                                             </div>
                                                                               <div class="col-md-2">
-                                                                                 <button class="btn btn-success pull-left save-workflow-pemenang">Save Workflow</button>
+                                                                                 <button class="btn btn-success pull-left save-workflow-pemenang action-pelaksanaan">Save Workflow</button>
                                                                             </div>
                                                                         </div>
                                                                         <div class="row" >
@@ -1139,7 +1139,7 @@
                                                                              <div class="row">
                                                                                 <div class="col-md-4">
                                                                                     <div class="form-group">
-                                                                                        <button class="btn btn-success pull-left ajukan-pemenang">Ajukan Pemenang</button>
+                                                                                        <button class="btn btn-success pull-left ajukan-pemenang action-pelaksanaan">Ajukan Pemenang</button>
                                                                                         <label class="status-persetujuan-pemenang"></label>
                                                                                     </div>
                                                                                 </div>
