--- a/Reston.EProc.Runner.IIS/View/pengadaan_add_terbuka.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan_add_terbuka.html
@@ -30,7 +30,6 @@
     <link href="dist/site.css" rel="stylesheet" />
     <link href="plugins/jQueryUItotop/ui.totop.css" rel="stylesheet" />
     <link rel="stylesheet" href="plugins/JQueryValidation/validationEngine.jquery.css">
-    <link href="chatjs/css/jquery.chatjs.css" rel="stylesheet" />
     <link href="plugins/datepicker/datepicker3.css" rel="stylesheet" />
     <link rel="stylesheet" href="bootstrap/css/bootstrap-tagsinput.css">
     <link rel="stylesheet" href="dist/app.css">
@@ -760,7 +759,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title">Konfirmasi</h4>
                     <div class="modal-body">
-                        Dengan menekan tombal "lanjut" dokumen pengadaan ini akan diajukan pada Controller Pengadaaan, Dept. Head Pengadaan, dan Div. Head Pengadaan untuk dimintai persetujuan
+                        Dengan menekan tombol "lanjut" dokumen pengadaan ini akan diajukan pada Controller Pengadaaan, Dept. Head Pengadaan, dan Div. Head Pengadaan untuk dimintai persetujuan
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -803,7 +802,6 @@
 
     <script src="dist/site.js"></script>
     <script src="dist/js/app.min.js"></script>
-    <!-- <script src="chatjs/chat.js"></script>-->
     <script src="plugins/angular/angular.min.js"></script>
     <script src="dist/js/pengadaan-add-terbuka.js"></script>
     <script src="blockui/jquery.blockUI.js"></script>
