--- a/Reston.Identity/Views/Admin/DetailUser.cshtml
+++ b/Reston.Identity/Views/Admin/DetailUser.cshtml
@@ -53,7 +53,9 @@
                         </div>
                         <div class="form-group">
                             <label>Display Name:</label>
-                            @Html.DisplayTextFor(model => model.UserDetail.DisplayName)
+                          <!--  @Html.DisplayTextFor(model => model.UserDetail.DisplayName)-->
+                        @Html.TextBoxFor(model => model.UserDetail.DisplayName, new { @class = "form-control", @placeholder = "DisplayName" })
+                      
                         </div>
                         <div class="form-group">
                             <label>User LDAP:</label>
