user name terkait jadi approval, tim pic jadi tim pic ga & procu

--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -1129,8 +1129,8 @@
                                                                                 <table class="table table-bordered table-striped table-responsive" id="tbl_apporval_pemenang" style="margin-top:20px; ">
                                                                                     <thead>
                                                                                         <tr>
-                                                                                            <th>User</th>
-                                                                                            <th>Jabatan</th>
+                                                                                            <th>Approval</th>
+                                                                                            <th>Status</th>
                                                                                             <th></th>
                                                                                         </tr>
                                                                                     </thead>
